# theia-demo

./: .env_project  .gitignore  Makefile  README.md  mypy.ini  pyproject.toml  ruff.toml
context/: Dockerfile
context/cpu/: docker-compose.yml
context/gpu/: docker-compose.yml
experimentation/notebooks/: test_gpu.ipynb
project_module/: pyproject.toml
project_module/src/project_module/theia/dataset/image/: image_common.py
project_module/src/project_module/theia/decoding/: decode.py  depth_anything.py
project_module/src/project_module/theia/preprocessing/feature_extraction_core/: models.py
project_module/src/project_module/theia/scripts/preprocessing/: feature_extraction.py
