[project]
name = "project"
requires-python = ">=3.10,<3.13"
dynamic = [ "dependencies" ]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
project-module = {path = "project_module", develop = true}

[tool.poetry.group.jupyter.dependencies]
jupyterlab = "^4.3.6"
notebook = "^7.3.3"


[tool.poetry.group.dev.dependencies]
ruff = "^0.11.2"
mypy = "^1.15.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
