[project]
name = "project-module"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "pydantic (>=2.10.6,<3.0.0)",
    "numpy>=1.26.4",
    "torch>=2.1.0",
    "torchaudio>=0.13.1",
    "torchvision>=0.16.0",
    "tensorflow==2.15.1",
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    "rich>=13.4.2",
    "wandb",
    "transformers",
    "einops",
    "webdataset@git+https://github.com/elicassion/webdataset.git@elicassion/fix_shuffle_bug",
    "opencv-python==4.8.0.74",
    "av",
    "seaborn",
    "matplotlib",
    "datasets",
    "tqdm",
    "tensorflow-datasets (>=4.9.8,<5.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
]

[tool.poetry]
packages = [{include = "project_module", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
